kubernetes/apps/base/cliproxy/cliproxy/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cliproxy
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
