kubernetes/apps/base/cliproxy/cliproxy/app/httproute-ui.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cliproxy-ui
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
      sectionName: wildcard-keiretsu-top-https
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
      sectionName: wildcard-keiretsu-top-https
  hostnames:
    - "cliproxy.${COMMON_DOMAIN}"
  rules:
    - matches:
        - path:
            type: Exact
            value: /management.html
        - path:
            type: PathPrefix
            value: /v0/management
        - path:
            type: PathPrefix
            value: /v0/resource/plugins
      backendRefs:
        - group: ""
          kind: Service
          name: cliproxy
          port: 8317
          weight: 1
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove:
              - Server
              - X-XSS-Protection
            set:
              - name: X-Content-Type-Options
                value: nosniff
              - name: X-Frame-Options
                value: SAMEORIGIN
              - name: Cache-Control
                value: no-transform
